# codeclaw

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
closeclaw/: config.py  constants.py  logger.py
closeclaw/agent/tools/: base.py  shell.py
closeclaw/provider/: __init__.py  base.py  openai.py  response.py
codeclaw/: config.py  constants.py
codeclaw/agent/: loop.py
codeclaw/agent/tools/: shell.py
codeclaw/constants/: constants.py  provider.py  shell_tool.py
codeclaw/provider/: __init__.py  anthropic.py  base.py  openai.py  response.py
tests/: __init__.py  conftest.py  test_openai_provider.py  test_response.py
